--- a/src/D3D12Playground.vcxproj.filters
+++ b/src/D3D12Playground.vcxproj.filters
@@ -21,4 +21,21 @@
     <None Include="HybridCRT.props" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Natvis Include="$(MSBuildThisFileDirectory)..\..\natvis\wil.natvis" />
+    <Natvis Include="$(MSBuildThisFileDirectory)..\..\natvis\wil.natstepfilter" />
+  </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="shaders\SimplePS.hlsl">
+      <Filter>Shaders</Filter>
+    </FxCompile>
+    <FxCompile Include="shaders\SimpleVS.hlsl">
+      <Filter>Shaders</Filter>
+    </FxCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Filter Include="Shaders">
+      <UniqueIdentifier>{3dce76bf-83c4-4667-85c7-bfe2b7b096bb}</UniqueIdentifier>
+    </Filter>
+  </ItemGroup>
 </Project>
