--- a/src/D3D12Playground.vcxproj
+++ b/src/D3D12Playground.vcxproj
@@ -116,12 +116,14 @@
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Presenter.cpp" />
     <ClCompile Include="Renderer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DirectXHelper.h" />
     <ClInclude Include="MainWindow.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="Presenter.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="WindowBase.h" />
   </ItemGroup>
