refactor: 优化 SwapChain 接口

--- a/src/D3D12Playground.vcxproj
+++ b/src/D3D12Playground.vcxproj
@@ -147,6 +147,7 @@
     <ClCompile Include="Win32Helper.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ColorInfo.h" />
     <ClInclude Include="DirectXHelper.h" />
     <ClInclude Include="GraphicsContext.h" />
     <ClInclude Include="MainWindow.h" />
